appId: com.example.app

---

- launchApp:
    appId: "com.example.app"
    clearState: true
    stopApp: true
    permissions:
      notifications: allow
      android.permission.ACCESS_FINE_LOCATION: deny

- assertVisible:
    text: "Join the Greenstand movement!" 

- swipe:
    start: "80%, 50%"
    end: "20%, 50%"
    duration: 500

- assertVisible:
    text: "Experience the convenience"  

- swipe:
    start: "80%, 50%"  
    end: "20%, 50%"
    duration: 500

- assertVisible:
    text: "Enjoy the ease and convenience of secure and reliable token"

- assertVisible:
    text: "LOG IN"

- tapOn: LOG IN

- assertNotVisible:
    text:  "Enjoy the ease and convenience of secure and reliable token"

- assertVisible:
    text: "Log In"