appId: com.example.app

---

- launchApp:
    appId: "com.example.app"
    clearState: true
    stopApp: true
    permissions:
      notifications: allow
      android.permission.ACCESS_FINE_LOCATION: deny

- assertVisible:
    text: "Join the Greenstand movement!" 

- repeat:
    while:
      notVisible: GET STARTED
    commands:
      - tapOn: CONTINUE

- assertVisible:
    text: "Enjoy the ease and convenience of secure and reliable token"

- assertVisible:
    text: "GET STARTED"

- tapOn:
    text: "GET STARTED"

- assertNotVisible:
    text:  "Enjoy the ease and convenience of secure and reliable token"

- assertVisible:
    text: "Log In"