appId: com.example.app

---

- launchApp:
    appId: "com.example.app"
    clearState: true
    stopApp: true
    permissions:
      notifications: allow
      android.permission.ACCESS_FINE_LOCATION: deny

- assertVisible:
    text: "Join the Greenstand movement!"

- tapOn:
   text: SKIP THE TOUR

- assertVisible:
    text: "Log In"